# sagco-controls-v2

./: .dockerignore  .gitignore  Cargo-android.toml  Cargo.toml  Dockerfile  Dockerfile.android  README.md  detector.rs  docker-compose.yml  ledger.rs  main.rs  mod.rs  reporter.rs  sagco-cloudshell-fix.sh  sagco-cloudshell-init.sh  sagco.compose.yaml
.github/workflows/: sagco-ci.yml
src/: main.rs
src/modules/: crypto.rs  detector.rs  ledger.rs  mod.rs
